# railchess-aarc-rc-converter

./: .gitignore  CMakeLists.txt  README.md
samples/: qinghu-aarc.json  qinghu-config.json  qinghu-rc.json
server/: CMakeLists.txt
server/src/: main.cc  utils.cc  utils.h  winit.cc  winit.h
src/: converter.cc  converter.h  geometry.cc  geometry.h  main.cc  rc.cc  rc.h
